  * debian/rules:
    - run tests in verbose mode during build
    - drop explicit usage of autotools-dev
    - drop usage of autoreconf debhelper sequence, it's not needed anymore
      since we are now using a complete upstream release tarball
    - drop passing --baseruby to configure, since do not require an existing
      ruby anymore
  * autopkgtest: make use of the text exclusion rules under test/excludes/
  * Declare compatibility with Debian Policy 4.1.2; no changes needed
  * debian/libruby2.5.symbols: update with symbols added/removed since the
    preview1 release
  * debian/tests/bundled-gems: handle extra field in gems/bundled_gems
  * Bump debhelper compatibility level to 10
    - change debian/rules to call ./configure directly, to use upstream's
      built-in multiarch support as before debhelper compatibility level 9

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 23 Dec 2017 21:59:33 -0200

ruby2.5 (2.5.0~preview1-1) unstable; urgency=medium

  [ Antonio Terceiro ]
  * New upstream version 2.5.0~preview1
  * debian/patches: import all of our remaining changes wrt upstream. All the
    changes to tests were transformed into exclude files under test/excludes/
  * ruby2.5-dev: don't install *.a files anymore; they are not installed by
    the upstream build system anymore.
  * debian/rules: adapt removal of embedded certificate store in Rubygems
  * debian/rules: also remove embedded certificate store from bundler

  [ Christian Hofstaedtler ]
  * Remove packaging for tcltk extension; it has been removed from Ruby core
    upstream.
  * Drop migration from old -dbg package
  * Disable test for homedir expansion which fails in sbuild
  * Upstream tarballs no longer come from git
  * Update jquery in missing-sources
  * d/copyright: Add info for darkfish icon set
  * Build with default OpenSSL once again

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 10 Oct 2017 21:12:54 -0300

ruby2.3 (2.3.3-1) unstable; urgency=medium
