@@ -18,6 +18,9 @@ ruby2.5 (2.5.0~rc1-1) UNRELEASED; urgency=medium
       since we are now using a complete upstream release tarball
     - drop passing --baseruby to configure, since do not require an existing
       ruby anymore
+    - skip setting DEB_HOST_MULTIARCH if already set
+    - replace manual call to dpkg-parsechangelog with including
+      /usr/share/dpkg/pkg-info.mk and using variables from there.
   * autopkgtest: make use of the text exclusion rules under test/excludes/
   * Declare compatibility with Debian Policy 4.1.2; no changes needed
   * debian/libruby2.5.symbols: update with symbols added/removed since the
